[gd_scene load_steps=4 format=3 uid="uid://b27l8rnmb4cxy"]

[ext_resource type="PackedScene" uid="uid://fwd72kkqeyh4" path="res://effects/space_background.tscn" id="1_k4vmb"]
[ext_resource type="Script" path="res://ui/Screens/game_over.gd" id="1_xn68v"]
[ext_resource type="Resource" uid="uid://c0j0oaqb8xqup" path="res://game_stats.tres" id="2_llcpx"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xn68v")
game_stats = ExtResource("2_llcpx")

[node name="SpaceBackground" parent="." instance=ExtResource("1_k4vmb")]

[node name="LabelContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -20.0
offset_right = 44.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="GameOverLabel" type="Label" parent="LabelContainer"]
layout_mode = 2
text = "Game Over"
horizontal_alignment = 1

[node name="ScoreContainer" type="HBoxContainer" parent="LabelContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ScoreLabel" type="Label" parent="LabelContainer/ScoreContainer"]
layout_mode = 2
text = "Score:"

[node name="ScoreValue" type="Label" parent="LabelContainer/ScoreContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="HighScoreContainer" type="HBoxContainer" parent="LabelContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HighScoreLabel" type="Label" parent="LabelContainer/HighScoreContainer"]
layout_mode = 2
text = "HighScore:"

[node name="HighScoreValue" type="Label" parent="LabelContainer/HighScoreContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="Control" type="Control" parent="LabelContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="MenuLabel" type="Label" parent="LabelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Press space to return to start"
horizontal_alignment = 1
